=== Version 3.6.1 build ===
- Added online help functionality
- Fixed bug about news not taking into account expire field
- Fixed error in forum configuration panel with strict mode mysql
- Fixed bug about not checking course rules in sub-student user types
- Fixed default timezone in configuration to empty string (ticket 120)

=== Version 3.6.0 build 6235===
- Fixed content rules not taken into account when auto_complete is on
- Fixed bug in upgrading modules
- Fixed problem in custom blobks with {,} characters
- Fixed issue with lessons info in catalog
- Fixed issue in number of lesson of a course when lesson is archived
- Fixed problem about viewing avatars list in popup
- Fixed sorting of languages based to translation field
- Fixed issue with a notification in community version
- Removed enter voucher field when total price of selected lessons is 0
- Added checkbox for separating if site name and site moto will de displayed in header (except browser title bar)
- Extended search functionality for glossary
- Fixed problem with moduleIconFunctions in layout
- Fixed problem about considering examples in flashcard module (EF-545)
- Added autologin functionality
- Fixed link for file manager in organization section
- Added default user type in system settings
- Added option in test for forcing students to answer all the questions
- Fixed problem in editing announcements about default date values
- Fixed issue in lesson certificate module about issueCertificate
- Fixed issue about loading tabs in group reporting
- Changed maximize viewable area in creating content. It disappears left and right sidebars for the unit

=== Version 3.6.0 build 6152 ===
- Added IMS importing functionality
- Fixed issue with "Redirect after logout to" when input starts with http:// (EF-520)
- Added toggle to html mode in module billboard
- Fixed problem of displaying link for tests reports in community version
- Fixed problem about conflicted forms with entities