@@ -4,6 +4,8 @@
 - Fixed error in forum configuration panel with strict mode mysql
 - Fixed bug about not checking course rules in sub-student user types
 - Fixed default timezone in configuration to empty string (ticket 120)
+- Fixed error in creating user when default group has no lessons or courses
+- Fixed displaying payments icon in control panel when user type had no priviledges
 
 === Version 3.6.0 build 6235===
 - Fixed content rules not taken into account when auto_complete is on
